Realizacja paradygmatu w języku Java

--- a/Praca/magisterka.tex
+++ b/Praca/magisterka.tex
@@ -77,7 +77,7 @@ Wszystkie kolekcje, można przy przyjęciu odpowiedniego poziomu abstrakcji patr
 \paragraph{}
 Javascript jest językiem, wieloparadygmatowym. Jednak można powiedzieć, że najistotniejsze ze składających się na sukces tego języka cech to jego \verb|zdarzeniowość| (z angielskiego \verb|event-drivent|), oraz funkcyjność. O sile javacriptu stanowi właśnie łatwość definiowania zachowań obiektów poprzez określenie funkcji mającej wykonać się w przypadku wystąpienia konkretnego zdarzenia. Obiekty opakowujące funkcje, czyli \verb|domknięcia|, dokonują \verb|przechwycenia| (z angielskiego \verb|capture|), zmiennych przez referencję. Oznacza to, że mają do nich pełen dostęp i możliwość ich modyfikacji. Koncepcja ta choć niezwykle praktyczna, może jednak powodować niekiedy problemy, kiedy jakaś nieznana deweloperowi funkcja zaczyna modyfikować jego obiekty. Specyfika wykorzystania języka powoduje czasami nieporozumienia w kontekście referencji do aktualnego obiektu, \verb|this|. Każda z funkcji definiowanych w ten sposób definiuje swój własny obiekt \verb|this|. W przypadku konstruktorów będzie to nowo utworzony obiekt. W trybie \verb|strict|; mniej łaskawym dla niejasnych instrukcji, blokującym niekture konstrukcje, traktującym część \verb|cichych| błędów, jako błędy diałnia); \verb|undefined|, czyli brak obiektu. Zaś w przypadku wykonania funkcji, jako metody konkretnego obiektu, będzie to tak zwany \verb|context object|. Tego typu zachowania, często prowadzą do błędow w rozumieniu i poprawnym pisaniu kodu. Deweloper spodziewa się, \verb|this|, będze obiektem okalającym, co nie będzie prawdą. Tego typu zachowanie, jest jednak omijane poprzez przypisanie potrzebnej wartości \verb|this| do obiektu, który będzie \verb|przechwycony| przez domknięcie.
 \paragraph{}
-Na listingu \ref{lst:js}, zobrazowany jest przykład definiowania funkcji w języku javascript. Jak widać definicja funkcji rozpoczyna się od słowa kluczowego \verb|function|, po którym następuje opcjonalna nazwa (w przypadku funkcji wewnętrznej pominięta). Dalej w nawiasach okrągłych znajduje się lista parametrów funkcji, zaś na końcu ograniczony przez nawiasy klamrowe blok działania funkcji. Jak pokazuje przykład, możliwa jest praktcznie całkowita dowolność w traktowaniu funkcji jako obiektu. W linii siódmej, do obiektu \verb|domknięcie| przypisany zostaje wynik funkcji \verb|licznik|, czyli w tym przypadku funkcja anonimowa zdefiniowana, której definicja rozpoczyna się w linii trzeciej. W tym też miejscu utworzona zostaje zmienna lokalna \verb|liczba| funkcji \verb|licznik|, a jej referencja przekazana jest do anonimowej funkcji, która przypisana jest do zmiennej \verb|domknięcie|. Dlatego też kolejne wywołania tej funkcji, powodują zwiększanie licznika i wypisywanie w wyniku liczby o jeden większej od poprzedniej. W linii dziesiątej zastosowano inne rozwiązanie. Do zmiennej \verb|obiektLicznika| przypisano funcję licznik, zamiast wyniku jej wykonania. Dwukrotne wywołanie funkcji określających ten obiekt powoduje kolejno, wywołanie funkcji \verb|licznik|, czyli zwrócenie funkcji anonimowej, oraz jej wywołanie. W tym przypadku \verb|licznik| wywołuje się za każdym razem na nowo, co za tym idzie, zmienna \verb|liczba|, także tworzona jest na nowo, czyli wynikiem kolejnych instrukcji będzie, za każdym razem 1.
+Na listingu \ref{lst:js}, zobrazowany jest przykład definiowania funkcji w języku javascript. Jak widać definicja funkcji rozpoczyna się od słowa kluczowego \verb|function|, po którym następuje opcjonalna nazwa (w przypadku funkcji wewnętrznej pominięta). Dalej w nawiasach okrągłych znajduje się lista parametrów funkcji, zaś na końcu ograniczony przez nawiasy klamrowe blok działania funkcji. Jak pokazuje przykład, możliwa jest praktcznie całkowita dowolność w traktowaniu funkcji jako obiektu. W linii siódmej, do obiektu \verb|domknięcie| przypisany zostaje wynik funkcji \verb|licznik|, czyli w tym przypadku funkcja anonimowa zdefiniowana, której definicja rozpoczyna się w linii trzeciej. W tym też miejscu utworzona zostaje zmienna lokalna \verb|liczba| funkcji \verb|licznik|, a jej referencja przekazana jest do anonimowej funkcji, która przypisana jest do zmiennej \verb|domknięcie|. Dlatego też kolejne wywołania tej funkcji, powodują zwiększanie licznika i wypisywanie w wyniku liczby o jeden większej od poprzedniej. W linii dziesiątej zastosowano inne rozwiązanie. Do zmiennej \verb|obiektLicznika| przypisano funkcję licznik, zamiast wyniku jej wykonania. Dwukrotne wywołanie funkcji określających ten obiekt powoduje kolejno, wywołanie funkcji \verb|licznik|, czyli zwrócenie funkcji anonimowej, oraz jej wywołanie. W tym przypadku \verb|licznik| wywołuje się za każdym razem na nowo, co za tym idzie, zmienna \verb|liczba|, także tworzona jest na nowo, czyli wynikiem kolejnych instrukcji będzie, za każdym razem 1.
 \begin{lstlisting}[caption={Funkcyjność w języku javascript},label={lst:js},language=Javascript]
 function licznik() {
 	var liczba = 0;
@@ -93,8 +93,8 @@ console.log(obiektLicznika()()); //wypisze 1 w konsoli, o ile srodowisko udostep
 console.log(obiektLicznika()()); //wypisze 1 w konsoli, o ile srodowisko udostepnia obiekt console
 \end{lstlisting}
 \paragraph{}
-Javascript stanowi implementacje standardu skryptowych języków ECMAScript. Standard ten dopiero w swojej szóstej wersji, zamkniętej w czerwcu 2015 roku wprowadził konstrukcje, które można określić jako odpowiedniki wyrażeń lambda. Użycie tego standardu może jednak bywać problematyczne, ze względu na niespójną implementację pomiędzy przeglądarkami, które stanowią główne środowisko uruchomieniowe javascriptu. 
-Funkcje strzałkowe (\verb|arrow functions|), są javascriptową wersją wyrażeń lambda. Ich składnia przedstawiona jest na listingu \ref{lst:jsarrow}.
+JavaScript stanowi implementacje standardu skryptowych języków ECMAScript. Standard ten dopiero w swojej szóstej wersji, zamkniętej w czerwcu 2015 roku wprowadził konstrukcje, które można określić jako odpowiedniki wyrażeń lambda. Użycie tego standardu może jednak bywać problematyczne, ze względu na niespójną implementację pomiędzy przeglądarkami, które stanowią główne środowisko uruchomieniowe JavaScriptu. 
+Funkcje strzałkowe (\verb|arrow functions|), są JavaScriptową wersją wyrażeń lambda. Ich składnia przedstawiona jest na listingu \ref{lst:jsarrow}.
 \begin{lstlisting}[caption={Funkcje strzałkowe \cite{lambdajssyntax}},label={lst:jsarrow},language=Javascript]
 (param1, param2, ..., paramN) => { statements }
 (param1, param2, ..., paramN) => expression
@@ -108,9 +108,9 @@ singleParam => { statements }
 () => { statements }
 () => expression // rownowazne z: () => { return expression; }
 \end{lstlisting}
-Tego typu funkcje, rozwiazują problem niejasnego zachowania, referencji \verb|this|. Ponieważ nie definują własnego kontekstu, w ich wnętrzu odwołanie \verb|this|, zawsze określa obiekt, okalający funkcję w miejscu tworzenia. Zapewniają one także, bardziej skompresowaną konstrukcję. Są one doskonałym rozwiązaniem do funkcyjnych operacji na kolekcjach, takich jak filtrowanie czy mapowanie. Jedyną ich wadę stanowi fakt, niespójności implementacji JavaScriptu, przez różne przeglądarki. Dla przykładu Internet Explorer, nie wspiera tej konstrukcji. Do tego ze względu na różny stopień pokrycia specyfikacji ES6 przez przeglądarki, używanie tego standardu jest często niemile widziane, w produkcyjnych rozwiązaniach.
+Tego typu funkcje, rozwiązują problem niejasnego zachowania, referencji \verb|this|. Ponieważ nie definiują własnego kontekstu, w ich wnętrzu odwołanie \verb|this|, zawsze określa obiekt, okalający funkcję w miejscu tworzenia. Zapewniają one także, bardziej skompresowaną konstrukcję. Są one doskonałym rozwiązaniem do funkcyjnych operacji na kolekcjach, takich jak filtrowanie czy mapowanie. Jedyną ich wadę stanowi fakt, niespójności implementacji JavaScriptu, przez różne przeglądarki. Dla przykładu Internet Explorer, nie wspiera tej konstrukcji. Do tego ze względu na różny stopień pokrycia specyfikacji ES6 przez przeglądarki, używanie tego standardu jest często niemile widziane, w produkcyjnych rozwiązaniach. Biorąc pod uwagę silny nacisk na funkcyjność języka JavaScript, istotne wydaje się aby, funkcje strzałkowe upowszechniły się jak najszybciej, jako, że znacznie zwiększają przejrzystość i łatwość tworzenia kodu.
 \paragraph{}
-Od strony zagadnienia najstotniejszego w kontekście niniejszej pracy, językowi JavaScript w zasadzie niczego nie brakuje. Podstawowa klasa stanowiąca kolekcję \verb|Array|, oferuje metody obsługi przyjmujące obiekt funkcji odpowiednio aplikowany do elementów kolekcji. Dostępne są zatem między innymi operacje: \verb|filter|, \verb|map|, \verb|forEach|, \verb|reduce|, \verb|find|, \verb|every|, \verb|some|. Operacje te, występują w zasadzie w kadżdym API funkcyjnym o obsługi kolekcji. Niejednokrotnie w innej niż ta obecna w języku JavaScript formie, bądź pod innymi nazwami, jednak oferowana przez nie funkcjonalność jest w jakiś sposób dostępna. Z tego właśnie względu ważna jest wiedza na temat tego co konretnie oferują te operacje.
+Od strony zagadnienia najistotniejszego w kontekście niniejszej pracy, językowi JavaScript w zasadzie niczego nie brakuje. Podstawowa klasa stanowiąca kolekcję \verb|Array|, oferuje metody obsługi przyjmujące obiekt funkcji odpowiednio aplikowany do elementów kolekcji. Dostępne są zatem między innymi operacje: \verb|filter|, \verb|map|, \verb|forEach|, \verb|reduce|, \verb|find|, \verb|every|, \verb|some|. Operacje te, występują w zasadzie w kadżdym API funkcyjnym o obsługi kolekcji. Niejednokrotnie w innej niż ta obecna w języku JavaScript formie, bądź pod innymi nazwami, jednak oferowana przez nie funkcjonalność jest w jakiś sposób dostępna. Z tego właśnie względu ważna jest wiedza na temat tego co konkretnie oferują te operacje.
 \section{Opis podstawowych operacji funkcyjnych}
 \paragraph{}
 Operacja \verb|filter| polega na ograniczeniu kolekcji poprzez wyeliminowanie elementów, które nie spełniają kryterium określonego przez funkcję filtrującą. Funkcje filtrujące, czyli takie, które przyjmują jako argument, element kolekcji zaś w wyniku zwracają wartość logiczną, określającą spełnialność kryterium, zwane są predykatami. Operacja \verb|filter| jest zatem operacją przyjmującą predykat i zwracającą kolekcję, bądź obiekt pośredni w przypadku strumieni, zawierającą tylko elementy spełniające ten predykat. Przykładem takiego działania może być na przykład wyfiltrowanie tylko kobiet z listy ludzi.
@@ -123,7 +123,7 @@ Operacja \verb|reduce|, polega na \verb|spłaszczeniu|, \verb|zredukowaniu| prze
 \paragraph{}
 \verb|Find| znajduje pierwszy element wejściowego zbioru, który spełnia dany predykat. Zachowania w przypadku nieznalezienia elementu, są różne w zależności od konkretnego języka. Metoda ta różni się od \verb|filter|, różni się właśnie faktem przerwania procesowania po znalezieniu pierwszego rozwiązania.
 \paragraph{}
-Metody \verb|every| oraz \verb|some|, występujące także odpowiednio pod nazwami \verb|all| i \verb|any|, czy metoda przeciwna do \verb|some|, czyli \verb|none|, są metodami zwracającymi wartość logiczną. Cel tych metod jest możliwy do osiągnięcia także przy użyciu metody \verb|filter|, jednakże dla tych metod ważniejsze jest sprawdznie istnienia konkretnych elementów niż określenie, jakie elementy dane kryterium spełniają lub nie.
+Metody \verb|every| oraz \verb|some|, występujące także odpowiednio pod nazwami \verb|all| i \verb|any|, czy metoda przeciwna do \verb|some|, czyli \verb|none|, są metodami zwracającymi wartość logiczną. Cel tych metod jest możliwy do osiągnięcia także przy użyciu metody \verb|filter|, jednakże dla tych metod ważniejsze jest sprawdzenie istnienia konkretnych elementów niż określenie, jakie elementy dane kryterium spełniają lub nie.
 \section{Realizacja paradygmatu w języku C\#}
 \paragraph{}
 Język C\# został stworzony przez firmę Microsoft. Pierwsze informacje o języku pojawiły się w roku 2000. Jednak wygodne funkcyjne programowanie, stało się w tym języku możliwe, dopiero od wersji C\# 3.0 działającej na platformie .NET Framework w wersji 3.5, wprowadzonej siedem lat później. LINQ czyli Language INtegrated Query, jest jedną ze składowych pakietu .NET Framework, które pozwala na wykonywanie zapytań przypominających te znane z języka SQL, na obiektach. LINQ definiuje na tyle przejrzysty standard, że doczekał się implementacji w językach takich jak PHP, JavaScript, TypeScript i ActionScript. Natywnym środowiskiem tej technologii jest jednak język C\#. Patrząc na kształt tego czym jest i co oferuje LINQ, można odnieść wrażenie, że jego twórcom przyświecały podobne cele, jak autorowi niniejszej pracy. Oddzielenie logiki operacji na obiektach, od konkretnych realizacji tych obiektów. Zapytania do kolekcji; w przypadku LINQ do dokumentów XML, klas będących implementacjami interfejsu \verb|IEnumerable|, czy też bezpośrednio baz danych; nie powinny być różne w zależności od tego na jakim źródle danych pracujemy. Programistę powinno interesować tylko opisanie kryteriów wyniku. Resztą zajmie się już środowisko uruchomieniowe.
@@ -143,8 +143,48 @@ Jako API do funkcyjnej obsługi kolekcji LINQ pokrywa wszystkie wymienione głó
 Nazwy funkcji są jednak bliższe tym znanym z języka SQL niż tym wykorzystywanym w innych tego rodzaju bibliotekach. Mamy zatem \verb|Where| odpowiadające opisywanej instrukcji \verb|filter|. \verb|Select| jest realizacją \verb|map|. Jeśli chodzi o instrukcję \verb|forEach| to należy najpierw zebrać elementy do listy za pomocą \verb|ToList|, następnie korzystać z \verb|ForEach|. Jest to instrukcja, do której twórcy przywiązali najmniej wagi, najprawdopodobniej ze względu na fakt, że LINQ ma służyć jako rozszerzenie do zapytań o obiektu, nie zaś jako sposób wykonywania na nich określonych czynności. Operacja \verb|reduce|, określona jest jako \verb|SelectMany|, zaś \verb|find| jako \verb|First|. Metody \verb|every| i \verb|some| to odpowiednio \verb|All| i \verb|Any|.
 \paragraph{}
 Jako, że LINQ stanowi rozszerzenie, mające na celu symulowanie zachowania języka zapytań, posiada ono także inne możliwości. Oferowane są zatem takie funkcje jak \verb|GroupBy|, czyli w praktyce funkcja odwrotna do \verb|reduce|, \verb|OrderBy| czyli operacja sortująca, przyjmująca komparator, oraz spora ilość metod, których realizacja jest możliwa przy użyciu już opisanych, zostały jednak zdefiniowane dla czystej wygody programisty. Przykładami takich metod mogą być \verb|Max|, czy \verb|Sum|.
-
+\paragraph{}
+Dotychczas opis dotyczył tylko funkcyjnych rozwiązań do obsługi kolekcji. Do realizacji definiowania funkcji przekazywanych jako parametry wymienionych procedur, wykorzystano wyrażenia lambda. Ich składnia jest prawie identyczna do tej prezentowanej w przypadku funkcji strzałkowych. Jedyną różnicą jest opcjonalne wskazanie typu parametru, stosowane w przypadku kiedy niemożliwe dla kompilatora jest wywnioskowanie typu na podstawie wartości. Składnie tej instrukcji wygląda wówczas tak jak zaprezentowano na listingu \ref{lst:lambdaztypem}.
+\begin{lstlisting}[caption={Wyrażenie lambda z jawnym wskazaniem typu},style=sharpc,label={lst:lambdaztypem}]
+(int x, string s) => s.Length > x 
+\end{lstlisting}
+Tak jak w przypadku języka JavaScript, lambda przechwytuje swój kontekst przez referencje.
+\paragraph{}
+Język C\# jest zdecydowanie dobrym miejscem do rozpoczęcia nauki funkcyjnego przetwarzania kolekcji. Jego funkcyjne aspekty zostały stworzone głównie w tym właśnie celu. Natomiast możliwość stosowania alternatywnej, podobnej do języka SQL składni, sprawia, że łatwo odnajdą się w nim zarówno osoby programujące do tej pory imperatywnie, jak i te które znają głównie język zapytań bazodanowych.
 \section{Realizacja paradygmatu w języku Java}
+\paragraph{}
+Java jako język doczekała się API funkcyjnego dopiero w 2014 roku. Konkretnie wydanie wersji Java 8, które nastąpiło 14 marca 2014 wprowadziło zarówno obsługę wyrażeń lambda jak i strumieni. Wersja 8 języka Java była bez wątpienia wersją przełomową, dotychczas język nie był prawie wcale przygotowany na stosowanie funkcyjnego podejścia. Pomimo tego istniała biblioteka oferowana przez firmę Google, pozwalająca na tworzenie pseudo-funkcyjnego kodu. Guava oferowała, przetwarzanie kolekcji poprzez  przekazywanie, implementacji odpowiedniego interfejsu do metod realizujących filtrowanie czy mapowanie kolekcji. Jednakże brak wyrażeń lambda powodował konieczność bezpośredniego tworzenia wymaganych obiektów. Dodatkowo, konieczność używania dodatkowej biblioteki bywa czasami przeszkodą jeśli chodzi o pisanie aplikacji biznesowych. 
+Java 8 wprowadziła cztery elementy, które umożliwiły całkowitą zmianę sposobu programowania, są to:
+\begin{enumerate}
+	\item pakiet \verb|java.util.stream|
+	\item metody domyślne
+	\item interfejsy funkcyjne
+	\item wyrażenia lambda
+\end{enumerate}
+Dopiero mając te cztery elementy programowanie funkcyjne w Javie stało się możliwe.
+\paragraph{}
+ Po pierwsze pakiet \verb|java.util.stream|. Jest to pakiet zawierający głównie interfejsy, oraz klasy pomocnicze. Dwa najważniejsze z nich to \verb|Stream| oraz \verb|Collector|. Pierwszy z nich to główny interfejs programowania funkcyjnego, to właśnie ten interfejs zaopatruje kolekcje w niezbędne metody. Oferuje on między innymi, metody określone w niniejszej pracy jako niezbędne, czyli \verb|filter|, \verb|map|, \verb|forEach|, \verb|reduce|, \verb|findAny|, \verb|allMatch|, \verb|anyMatch|. W odróżnieniu od poprzednich języków, operacja \verb|findAny|, nie przyjmuje konkretnej funkcji filtrującej, lecz wymaga wcześniejszego przefiltrowania strumienia i wykonania jej na wyniku. Drugi z interfejsów czyli \verb|Collector|, zapewnia możliwość powrotu z interfejsu \verb|Stream|, do standardowych kolekcji. Mając strumień często będziemy chcieli "zebrać" go do listy czy mapy. Do tego celu służą właśnie instancje obiektów implementujących interfejs \verb|Collector|. Implementacja \verb|Collectora| nie jest zadaniem trywialnym, dla niezaznajomionych z koncepcją funkcyjnego programowania. Wymaga implementacji, aż pięciu funkcji, odpowiedzialnych odpowiednio za:
+\begin{enumerate}
+\item Zapewnienie funkcji tworzącej obiekt akumulatora. Może to być na przykład obiekt implementujący wzorzec budowniczego.
+\item Funkcji akumulatora, zbierającego pośrednie wyniki operacji. Trzymając się przykładu budowniczego, będzie to funkcja która przyjmuje obiekt akumulatora stworzony w pierwszym punkcie, oraz obiekt, który należy dodać do kolekcji, a następnie po prostu dodaje obiekt przy pomocy otrzymanego budowniczego.
+\item Funkcji łączącej akumulatory, potrzebnej w przypadku równoległego wykonania operacji. W naszym przykładzie funkcja przyjmująca dwóch budowniczych i łączących przetrzymywane przez nich elementy.
+\item Funkcji kończącej operację, konwertującej akumulator w docelową kolekcję. W kontekście wzorca budowniczego byłaby to metoda zwracająca operację kończącą czyli \verb|build|.
+\item Charakterystyk przetwarzanego strumienia, charakterystyki służą jako podpowiedź dla kompilatora i wirtualnej maszyny, w celu określenia możliwości kolektora. Przykładowe charakterystyki to \verb|CONCURRENT| czy \verb|UNORDERED|. Poprawne określenie charakterystyk może znacznie poprawić wydajność kolektora.
+\end{enumerate}
+Na szczęście jedna z klas z pakiety \verb|java.util.stream| posiada przygotowany zestaw podstawowych kolektorów. Pozwalając na łatwe zebranie wyników operacji na strumieniach na przykład do listy, czy słownika. Dostępna jest na przykład także metoda \verb|groupingBy|, o jakiej była wcześniej mowa w przypadku LINQ. W ostateczności zawsze można zaimplementować własny kolektor dopasowany do konkretnych potrzeb.
+\paragraph{}
+Sam interfejs \verb|Stream| nic by jednak nie dawał, gdyby standardowe kolekcje nie stanowiły jego implementacji. Tutaj na przeszkodzie stanął fakt powszechności języka Java i ilości kolekcji implementowanych nie w JDK, lecz przez użytkowników. Jeśli ktoś uznał domyślną implementację interfejsu \verb|List| czy \verb|Map| za nieoptymalną, mógł zaimplementować ten interfejs po swojemu, zaś w swoim API oferować jako typ wyjściowy po prostu interfejs. Ciężko w zasadzie nawet mówić o czymś takim jak domyślna implementacja, skoro zarówno dla listy jak i mapy w pakiecie \verb|java.util| znajdujemy po dwie implementacje (\verb|ArrayList|, \verb|LinkedList| dla \verb|List|, oraz \verb|HashMap| i \verb|LinkedHashMap| dla \verb|Map|). Twórcy stanęli więc przed następującym problemem. Należało dodać metody pozwalające na prostą konwersję interfejsów kolekcji do strumienia, bez niszczenia aktualnych implementacji tych interfejsów. Znalezione rozwiązanie to metody domyślne. Dotychczas interfejs mógł tylko deklarować nagłówki metod, bez zapewnienia choćby szkieletowej implementacji. Metody domyślne to metody w interfejsie oznaczone słowem kluczowym \verb|default|. Metody te nie muszą, choć mogą, być implementowane przez klasy implementujące dany interfejs. Po wprowadzeniu tej funkcjonalności do języka wystarczyło tylko zaimplementować metodę \verb|stream| oraz inne wymagane do operacji na strumieniach w interfejsie \verb|Collection|.
+\paragraph{}
+Wspomniana wcześniej Guava, bazowała na wykorzystywaniu specjalnych interfejsów, w których najczęściej wystarczyło zaimplementowanie jednej metody, \verb|apply|. Choć metoda była tylko jedna to wymuszała implementację konkretnego interfejsu. Nawet jeśli mieliśmy obiekt, udostępniający tylko jedną metodę, nie mogliśmy potraktować go jako domknięcia ponieważ, środowisko uruchomieniowe nie wiedziałoby, jaką metodę powinno wykonać. Java 8 wprowadza pojęcie interfejsu funkcyjnego. Jest to interfejs posiadający tylko jedną nie domyślną metodę. Dobrą praktyką jest oznaczanie tego typu interfejsów specjalną adnotacją \verb|@FunctionalInterface|, nie jest jednak ona wymagana do działania. Dzięki wprowadzeniu interfejsów funkcyjnych, możliwe stało się wprowadzenie metod operujących na instancjach tych właśnie interfejsów. Nie rozwiązywało to jednak do końca problemu który miała Guava. Dalej należało tworzyć obiekt z użyciem pełnej składni i implementować konkretną metodę. Na tym etapie składnia przypominałaby w dużym stopniu JavaScript, z tą różnicą, że zamiast słowa kluczowego \verb|function| mielibyśmy konstrukcje \verb|new ObiektFunkcyjny{}| z implementacją, konkretnej metody. Nie byłoby to zbyt wygodne rozwiązanie.
+\paragraph{}
+W tym właśnie momencie przechodzimy do ostatniego punktu, czyli wyrażeń lambda. Jak można się już domyślić wyrażenia lambda są realizacją interfejsów funkcyjnych. Konkretna lambda jest obiektem implementującym funkcyjny interfejs. Podstawowe pakiety Javy zawierają wiele interfejsów funkcyjnych będących docelowymi dla wyrażeń lambda i referencji metod. Co najważniejsze lambdy stanowią wygodne rozwiązanie i nie wymagają tworzenia obiektu wprost. Składnia jest bardzo podobna do tej znanej już z języka C\#. Jedyną różnicą jest zastosowanie pojedynczej strzałki, czyli \verb|->| zamiast \verb|=>|. Zmienne z bloku tworzenia lambdy są przechwytywane, z jednym zastrzeżeniem. Muszą być one oznaczone słowem kluczowym \verb|final|, bądź zachowywać się jak zmienne tym słowem oznaczone, określane jest to zwrotem \verb|effectively final|. Oznacza to, że nie można przypisać do nich, innego obiektu. Można jednak zmieniać własności tego obiektu, dlatego, rzadko stanowi to jakikolwiek problem. Dostępny jest także inny wariant wykorzystania funkcyjnych interfejsów. Zamiast używać wyrażenia lambda można zastosować referencję metody. Referencja metody jest wskazaniem na konkretną funkcję z danego typu, po jej użyciu tworzy się instancja funkcyjnego interfejsu, zawierająca tą właśnie metodę. Przykład zastosowania, wraz z porównaniem do składni wyrażenia lambda, pokazany został na listingu \ref{lst:lamdavsref}. 
+\begin{lstlisting}[caption={Wyrażenie lamda, a referencja metody},label={lst:lamdavsref},language=Java]
+List<Klienci> zieloniKlienciLamda = klienci.stream().filter(k -> k.jestZielony()).collect(toList());
+List<Klienci> zieloniKlienciReferencja metody = klienci.stream().filter(Klient::jestZielony).collect(toList());
+\end{lstlisting}
+Składnia referencji metody bywa na początku trochę mniej intuicyjna, jako że nie wskazuje bezpośrednio obiektu na którym wykonana zostanie metoda.
+\paragraph{}
+Java w wersji 7 nie dawała praktycznie, żadnych możliwości funkcyjnego rozwiązywania problemów. Jeśli zaś chodzi o wersję 8, to pokrywa ona całe spektrum możliwości. Choć można wytknąć pewne wady wybranym rozwiązaniom, na przykład metody domyślne wprowadzają, możliwość zachowań takich jak przy wielodziedziczeniu, to zakres udostępnionych funkcjonalności, zdecydowanie wynagradza te braki.
 \section{Realizacja paradygmatu w języku C++}
 \chapter{Zalety programowania funkcyjnego w rozwiązaniach praktycznych}
 \section{Podstawowe problemy i zadania w programowaniu aplikacji biznesowych}
@@ -295,6 +335,9 @@ Pierwszy test polegał na ograniczeniu kolekcji tylko do elementów parzystych. 
 	
 	\bibitem{linq}
 	http://itcraftsman.pl/zrozumiec-linq/
+
+	\bibitem{customcollector}
+	http://www.nurkiewicz.com/2014/07/introduction-to-writing-custom.html
 
 	
 \end{thebibliography}
