--- a/Praca/magisterka.tex
+++ b/Praca/magisterka.tex
@@ -305,6 +305,7 @@ Zaprezentowane funkcjonalności pozwalają już na pseudo-funkcyjne przetwarzani
 \paragraph{}
 Prezentowany kod dostępny jest także w sieci pod adresem \hyperref[https://github.com/krzysztof-osiecki/StreamAPI]{https://github.com/krzysztof-osiecki/StreamAPI}
 \section{Opis zakresu możliwości przygotowanego rozwiązania}
+Przedstawiony kod, zawiera się w jednym, łatwym do dystrybucji pliku \verb|.hpp|, czyli standardowym dla języka \verb|C++| formacie zawierającym, zarówno nagłówki metod jak i ich implementacje. Przygotowane rozwiązanie pozwala na utworzenie obiektu strumienia, przy użyciu kolekcji \verb|std:vector|. Strumień może zostać przetworzony tylko raz. W przypadku, próby przetwarzania już wyczerpanego strumienia, zgłoszony zostanie wyjątek \verb|streamAlreadyConsumedException|, nie wszystkie operacje powodują jednak wykorzystanie strumienia. Operacje które wyczerpują strumień nazwane będą operacjami terminalnymi, zaś pozostałe nieterminalnymi. Pokryte zostały wszystkie wspomniane w rozdziale trzecim metody. Dostępne są zatem instrukcja \verb|filter|, przyjmująca jednoargumentową funkcję zwracającą wartość logiczną, predykat. Zaaplikowanie tej funkcji do strumienia, nie ma natychmiastowego efektu, wykonanie tej funkcji odłożone jest do momentu w który jest ono niezbędne. Dlatego można składać wiele funkcji \verb|filter| bez obawy o niepotrzebne iterowanie strumienia. Operacja \verb|filter| jest jedną z dwóch operacji nieterminalnych. \verb|Map| jest operacją terminalną, zwracającą nowy nie przetworzony strumień, typu określonego przyjętą funkcją. Funkcja mapująca jest funkcją jednoargumentową z typu strumienia wejściowego w typ oczekiwanego strumienia wyjściowego. Następną operacją jest \verb|reduce|, również jest to operacja terminalna, polega ona na wykonaniu funkcji na kolejnych elementach strumienia, w taki sposób, że każde kolejne wywołanie przyjętej funkcji jako argumenty przyjmuje wynik poprzedniego wykonania, oraz następny element strumienia. \verb|Foreach| powoduje wykonanie funkcji na każdym z elementów strumienia, przekazana funkcja nie powinna zwracać wartości. Następnie mamy zestaw metod \verb|allMath|, \verb|anyMatches| i \verb|find|, podobnie jak w języku Java operacje te wymagają wcześniejszego przefiltrowania strumienia, same nie przyjmują żadnych parametrów. Wszystkie te operacje są operacjami terminalnymi. Drugą i zarazem ostatnią operacją nieterminalną jest \verb|peek|, operacja ta służy tylko jako podpowiedź dla developera. Przechodzi ona strumień, nie konsumując go i wypisując każdy z jego elementów na standardowe wyjście. Ostatnia operacja to funkcja powrotu, \verb|toVector|, jest to operacja terminalna tworząca \verb|std::vector|, ze strumienia na którym zostanie ona wywołana.
 \section{Porównanie przygotowanego API z istniejącymi w innych językach}
 \section{Testy weryfikujące wydajność rozwiązania względem natywnego języka C++}
 Czas wykonania każdego z testów mierzony był z pomocą następującej struktury:
