--- a/Praca/magisterka.tex
+++ b/Praca/magisterka.tex
@@ -66,7 +66,7 @@
 \emergencystretch=1em
 
 %opening
-\title{API w języku C++}
+\title{API funkcyjne w języku C++}
 \author{Krzysztof Osiecki}
 \begin{document}\pagestyle{fancy}\lhead{}\rightmark
 
